--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,35 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Node.js
+node_modules/
+.env
+
+# Python
+__pycache__/
+*.py[cod]
+.ipynb_checkpoints/
+
+# React
+build/
+.env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Docs & Editors
+.DS_Store
+.vscode/
+*.swp
+*.swo
+
+# Others (optional)
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
